--- a/yang/assets/css/styles.css
+++ b/yang/assets/css/styles.css
@@ -3,15 +3,22 @@
 body {
   margin: 50px;
   padding: 0;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: Didot;
+  color: red;
+  background-color: black;
 }
 
 .series,
 .artist,
-.title,
+
 .date,
 .time,
 .location {
-  font-size: 100px;
+  font-size: 36px;
   line-height: 1;
+}
+.title{
+  color: white;
+  font-style: italic;
+  font-size: 48px;
 }
