--- a/schutz/assets/css/styles.css
+++ b/schutz/assets/css/styles.css
@@ -4,14 +4,35 @@ body {
   margin: 50px;
   padding: 0;
   font-family: Helvetica, Arial, sans-serif;
+  background-image: url("ds22.jpg");
+
 }
 
-.series,
-.artist,
+.text {
+  position: absolute;
+  margin-top: 100px;
+  margin-left:100px;
+}
+.series {
+  font-size: 20px;
+  font-family: 'Crushed', cursive;
+  line-height: 1;
+}
+.artist {
+  font-size: 300px;
+  font-family: 'Crushed', cursive;
+  line-height: 1;
+}
+
+.artist:hover {
+  color: pink;
+}
+
 .title,
 .date,
 .time,
 .location {
-  font-size: 100px;
+  font-size: 20px;
+  font-family: 'Crushed', cursive;
   line-height: 1;
 }
