--- a/yi/assets/css/styles.css
+++ b/yi/assets/css/styles.css
@@ -15,3 +15,38 @@ body {
   font-size: 100px;
   line-height: 1;
 }
+
+.petriDish {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 0;
+  height: 100vh;
+  opacity: 0.7;
+}
+
+.petriDish img {
+  height: 100%;
+}
+
+.infoWrapper {
+  position: absolute;
+  z-index: 10;
+}
+
+.series {
+  color: #f7b23b;
+}
+
+.artist {
+  color: #db5304;
+}
+
+.date,
+.time,
+.location {
+  margin-left: 20vw;
+  font-size: 75px;
+}
+
+.date {margin-top: 10vh;}
