adding changes to peyton

--- a/peyton/assets/css/styles.css
+++ b/peyton/assets/css/styles.css
@@ -8,10 +8,13 @@ body {
 
 .series,
 .artist,
-.title,
+.title, {
+  font-size: 80px;
+  color: #412B66 ;
+}
 .date,
 .time,
 .location {
-  font-size: 100px;
+  font-size: 80px;
   line-height: 1;
 }
