--- a/imhof/assets/css/styles.css
+++ b/imhof/assets/css/styles.css
@@ -3,7 +3,8 @@
 body {
   margin: 50px;
   padding: 0;
-  font-family: Veranda;
+  font-family: 'Cinzel', serif;
+  font-weight: 400;
   background-color: gray;
   
 }
@@ -16,4 +17,11 @@ body {
 .location {
   font-size: 100px;
   line-height: 1;
+}
+
+.series,
+.date,
+.time,
+.location {
+  text-decoration: line-through;
 }
