--- a/peyton/assets/css/styles.css
+++ b/peyton/assets/css/styles.css
@@ -6,15 +6,19 @@ body {
   font-family: Helvetica, Arial, sans-serif;
 }
 
+h1 {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+}
+
+
 .series,
 .artist,
-.title, {
-  font-size: 80px;
-  color: #412B66 ;
+.title { 
+  font-size: 5px;
 }
 .date,
 .time,
 .location {
-  font-size: 80px;
+  font-size: 5px;
   line-height: 1;
 }
