--- a/von-bonin/assets/css/styles.css
+++ b/von-bonin/assets/css/styles.css
@@ -4,20 +4,27 @@ body {
   margin: 50px;
   padding: 0;
   font-family: Helvetica, Arial, sans-serif;
+  background-color:#00f;
 }
 
 .series{
-  position: relative;
-  font-size: 30px;
-  font-family: 'Times New Roman', Times, serif;
+  position: absolute;
+  font-size: 50px;
+  font-family: Helvetica, Arial, sans-serif;
+  color:white;
 
 }
 .artist{  
   position: absolute;
+  color: #fff;
   font-size: 120px;
   font-family: Helvetica, Arial, sans-serif;
   top: 120px;
   text-transform: uppercase;
+}
+
+.date{
+  font-style: italic;
 }
 .title{
     position: absolute;
@@ -28,11 +35,12 @@ body {
 .contents{
     position: absolute;
     font-size: 30px;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Helvetica, Arial, sans-serif;
     text-align: center;
     top:600px;
     margin-left: auto;
     margin-right: auto;
+    line-height: 20px;
 }
 
 /* 
