adding changes to yi

--- a/yi/assets/css/styles.css
+++ b/yi/assets/css/styles.css
@@ -42,11 +42,18 @@ body {
   color: #db5304;
 }
 
-.date,
-.time,
+.date{
+  margin-left: 40vw;
+}
+.time{
+  margin-left: 40vw;
+
+
+}
 .location {
-  margin-left: 20vw;
+  margin-left: 40vw;
   font-size: 75px;
+
 }
 
 .date {margin-top: 10vh;}
