--- a/koether/assets/css/styles.css
+++ b/koether/assets/css/styles.css
@@ -5,6 +5,8 @@ body {
   padding: 0;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: #A00000;
+  animation: bgPulse 3s infinite;
+  animation-direction: alternate-reverse;
 }
 
 .series,
@@ -15,4 +17,9 @@ body {
 .location {
   font-size: 150px;
   line-height: 1.5;
+}
+
+@keyframes bgPulse {
+  from {background: #ff8484;}
+  to {background: #fff;}
 }
