--- a/harrison/assets/css/styles.css
+++ b/harrison/assets/css/styles.css
@@ -3,10 +3,11 @@
 body {
   margin: 50px;
   padding: 0;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: avenir;
   align-content: center; 
   text-align: center;
   background-color: yellow;
+  
 }
 
 .series,
@@ -16,7 +17,7 @@ body {
 .time,
 .location {
   font-size: 100px;
-  line-height: 2;
+  line-height: 1.5;
 }
 
 a {
@@ -30,9 +31,11 @@ a:hover {
 
 .header {
 margin-bottom: 50px;
-height: 30px;
+height: 50px;
 width: 100%;
 background-color: black;
 color: white;
 padding-top: 10px;
+padding-left: 10px;
+padding-right: 10px;
 }
