--- a/von-bonin/assets/css/styles.css
+++ b/von-bonin/assets/css/styles.css
@@ -5,6 +5,7 @@ body {
   padding: 0;
   font-family: Helvetica, Arial, sans-serif;
   background-color:#00f;
+  text-align: right;
 }
 
 .series{
@@ -21,6 +22,7 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   top: 120px;
   text-transform: uppercase;
+  right: 0;
 }
 
 .date{
@@ -46,3 +48,12 @@ body {
 /* 
 .time,
 .location,  */
+
+.time{
+  font-weight: bold;
+  margin-top: 150px;
+  background: pink;
+  color:black;
+  text-align: left;
+  left:0;
+}
