--- a/trockel/assets/css/styles.css
+++ b/trockel/assets/css/styles.css
@@ -6,12 +6,39 @@ body {
   font-family: Helvetica, Arial, sans-serif;
 }
 
-.series,
-.artist,
-.title,
-.date,
-.time,
-.location {
-  font-size: 100px;
-  line-height: 1;
+.head {
+  font-size: 20px;
+  text-transform: uppercase;
+  text-align: center;
+  display: table;
+  width: 100%; 
+  table-layout: fixed; 
+  border-spacing: 10px; 
+}
+
+.Column{
+    display: table-cell;
+    background-color: red; 
+}
+
+.intro{
+  font-size: 50px;
+  margin: 50px 0;
+}
+
+.foot {
+  font-size: 20px;
+  text-transform: uppercase;
+  text-align: center;
+  display: table;
+  width: 100%; 
+  table-layout: fixed; 
+  border-spacing: 10px; 
+  margin: 60px 0;
+  color: white;
+}
+
+.Column2{
+  display: table-cell;
+  background-color: #d19999; 
 }
