--- a/von-bonin/assets/css/styles.css
+++ b/von-bonin/assets/css/styles.css
@@ -3,15 +3,15 @@
 body {
   margin: 50px;
   padding: 0;
-  font-family: Helvetica, Arial, sans-serif;
-  background-color:#00f;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  background-color: plum;
   text-align: right;
 }
 
 .series{
   position: absolute;
   font-size: 50px;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   color:white;
 
 }
@@ -19,7 +19,7 @@ body {
   position: absolute;
   color: #fff;
   font-size: 120px;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   top: 120px;
   text-transform: uppercase;
   right: 0;
@@ -27,11 +27,14 @@ body {
 
 .date{
   font-style: italic;
+  color: #fff;
+  font-size: 120px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 .title{
     position: absolute;
     font-size: 120px;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     top: 220px;
   }
 .contents{
@@ -52,7 +55,7 @@ body {
 .time{
   font-weight: bold;
   margin-top: 150px;
-  background: pink;
+  background: lightslategray;
   color:black;
   text-align: left;
   left:0;
