--- a/yi/assets/css/styles.css
+++ b/yi/assets/css/styles.css
@@ -29,6 +29,14 @@ body {
   height: 100%;
 }
 
+.yi_image1 {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 0;
+  height: 100vh;
+  opacity: 0.7;
+}
 .infoWrapper {
   position: absolute;
   z-index: 10;
