--- a/koether/assets/css/styles.css
+++ b/koether/assets/css/styles.css
@@ -4,9 +4,10 @@ body {
   margin: 50px;
   padding: 0;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  color: #A00000;
+  color: rgb(207, 80, 80);
   animation: bgPulse 3s infinite;
   animation-direction: alternate-reverse;
+  text-align: center
 }
 
 .series,
@@ -15,8 +16,8 @@ body {
 .date,
 .time,
 .location {
-  font-size: 150px;
-  line-height: 1.5;
+  font-size: 100px;
+  line-height: 1.1;
 }
 
 @keyframes bgPulse {
