--- a/fei/assets/css/styles.css
+++ b/fei/assets/css/styles.css
@@ -9,6 +9,7 @@ body {
   font-style: oblique;
 }
 
+a,
 .series,
 .artist,
 .website,
@@ -16,19 +17,24 @@ body {
 .date,
 .time,
 .location {
+  color:#fff;
+  opacity: 0;
+  text-transform:uppercase;
   font-size: 75px;
   line-height: .75;
 }
 
-.artist{
-  color:#fff;
-  text-transform:uppercase;
+.series:hover,
+.artist:hover,
+.website:hover,
+.title:hover,
+.date:hover,
+.time:hover,
+.location:hover {
+  opacity: 1;
+  background: #000;
 }
 
-.artist:hover{
-  background: #000;
-  font-size:130px;
-}
 
 .cao{
   display:none;
@@ -38,4 +44,11 @@ body {
   font-style: italic;
   font-size: 200px;
   font-family: 'Times New Roman', Times, serif;
+}
+
+.contentWrapper {
+  position: absolute;
+  z-index: 2;
+  top: 0px;
+  left: 0px;
 }
