--- a/genzken/assets/css/styles.css
+++ b/genzken/assets/css/styles.css
@@ -3,15 +3,16 @@
 body {
   margin: 50px;
   padding: 0;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: lightgrey;
 }
 
 .series{
     position: relative;
     font-size: 50px;
     top: 2px;
-    float: center;
-    text-align: center;
+    float: left;
+    text-align: left;
     text-transform: uppercase;
     z-index:5;
 }
@@ -29,10 +30,10 @@ body {
     top: 400px;
     color: #FFCB0C;
     text-transform: uppercase;
-    float: right;
-    text-align: right;
+    float: left;
+    text-align: left;
     right: 20px;
-    text-align: center;
+    text-align: left;
 }
 
 .artist:hover{
@@ -44,8 +45,8 @@ body {
   position: absolute;
   font-size: 120px;
   top: 510px;
-  float: right;
-  text-align: right;
+  float: left;
+  text-align: left;
   right: 20px;
 
 }
@@ -53,15 +54,15 @@ body {
 .info{
   position: absolute;
   font-size: 80px;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 300;
-  text-align: right;
+  text-align: left;
   top:640px;
   margin-left: auto;
   margin-right: auto;
 }
 
 img{
-  max-width: 300px;
+  max-width: 800px;
 }
 
