--- a/peyton/assets/css/styles.css
+++ b/peyton/assets/css/styles.css
@@ -1,28 +1,33 @@
 /* Elizabeth Peyton */
 
 body {
+  background-color: palevioletred;
   margin: 50px;
   padding: 0;
-  font-family: Helvetica, Arial, sans-serif;
+  /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
+font-family: avenir;
+
 }
 
 h1 {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+  /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  */
 }
 
 
 .series {
-  font-size: 15px;
-  padding-bottom: 50px;
-}
-.artist 
-.title { 
   font-size: 50px;
+  padding-bottom: 50px;
+  text-align: center;
+}
+.artist, 
+.title { 
+  font-size: 40px;
+
 }
 .date,
 .time,
 .location {
-  font-size: 20px;
+  font-size: 24px;
   line-height: 1;
 }
 
