--- a/koether/assets/css/styles.css
+++ b/koether/assets/css/styles.css
@@ -20,7 +20,19 @@ body {
   line-height: 1.1;
 }
 
+.book {
+  width: 130px;
+  height: 195px;
+  background: url("assets/img/book3.jpg") no-repeat;
+  margin: 50px;
+
+}
+
+.book:hover {
+    background: url("assets/img/book3.jpg") no-repeat;
+}
+
 @keyframes bgPulse {
-  from {background: #ff8484;}
+  from {background: black;}
   to {background: #fff;}
 }
