--- a/schutz/assets/css/styles.css
+++ b/schutz/assets/css/styles.css
@@ -8,11 +8,13 @@ body {
 
 }
 
-.text {
+.wrapper {
   position: absolute;
-  margin-top: 100px;
-  margin-left:100px;
+  margin-top: 80px;
+  margin-left: 80px;
+  margin-bottom: 100px;
 }
+
 .series {
   font-size: 20px;
   font-family: 'Crushed', cursive;
@@ -22,10 +24,19 @@ body {
   font-size: 230px;
   font-family: 'Crushed', cursive;
   line-height: 1;
+  
 }
 
 .artist:hover {
   color: pink;
+}
+
+.img {
+  width: 70%;
+}
+
+img:hover {
+  filter: invert();
 }
 
 .title {
@@ -44,8 +55,9 @@ body {
 .emmit {
   width: 30px;
   height: 30px;
+  margin: 20px 0;
 }
 
-.emmit:hover {
+emmit:hover {
   filter: invert();
 }
