--- a/yi/assets/css/styles.css
+++ b/yi/assets/css/styles.css
@@ -91,12 +91,29 @@ font-family: 'Bungee', cursive;
 	height: 100px;
   background: red;
   border-radius: 50%;
+
 }
+.shape1{
+width: 100px;
+height: 100px;
+background: #333;
+animation-name: square1;
+animation-duration: 5s;
+animation-iteration-count: infinite;
+top: 10px;
+left: 10px;
+}
+
+@keyframes square1{
+from {background: orange;}
+to {background: red;}
+}
+  
 
 .shape2 {
   width: 400px;
 	height: 300px;
-  background: red;
+  background:green;
   position: fixed;
   border-radius: 50%;
   left: 180px;
@@ -105,7 +122,7 @@ font-family: 'Bungee', cursive;
 .shape3 {
   width: 800px;
 	height: 600px;
-  background: red;
+  background:turquoise;
   position: fixed;
   border-radius: 50%;
   left: 180px;
