mejia schutz edtis

--- a/schutz/assets/css/styles.css
+++ b/schutz/assets/css/styles.css
@@ -5,6 +5,7 @@ body {
   padding: 0;
   font-family: Helvetica, Arial, sans-serif;
   background-image: url("ds22.jpg");
+  background: linear-gradient(to right, #e8f7ec , #b6edc6); 
 
 }
 
@@ -16,14 +17,16 @@ body {
 }
 
 .series {
-  font-size: 20px;
+  font-size: 50px;
   font-family: 'Crushed', cursive;
   line-height: 1;
+  text-align:center;
 }
 .artist {
   font-size: 230px;
   font-family: 'Crushed', cursive;
   line-height: 1;
+  animation: blink 2s linear infinite;
   
 }
 
@@ -31,8 +34,14 @@ body {
   color: pink;
 }
 
+@keyframes blink{
+  0%{opacity: 0;}
+  50%{opacity: .5;}
+  100%{opacity: 2;}
+  }
+
 .img {
-  width: 70%;
+  width: 100%;
 }
 
 img:hover {
@@ -47,9 +56,10 @@ img:hover {
 .date,
 .time,
 .location {
-  font-size: 20px;
+  font-size: 90px;
   font-family: 'Crushed', cursive;
   line-height: 1;
+  text-align:left;
 }
 
 .emmit {
