--- a/genzken/assets/css/styles.css
+++ b/genzken/assets/css/styles.css
@@ -66,3 +66,13 @@ img{
   max-width: 800px;
 }
 
+.circle {
+  position: absolute;
+  top: 100px;
+  right: 100px;
+  z-index: 2;
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  background: #333;
+}
