--- a/fei/assets/css/styles.css
+++ b/fei/assets/css/styles.css
@@ -18,7 +18,7 @@ a,
 .date,
 .time,
 .location {
-  color:#fff;
+  color:rgb(12, 204, 238);
   opacity: 0;
   text-transform:uppercase;
   font-size: 75px;
