--- a/von-bonin/assets/css/styles.css
+++ b/von-bonin/assets/css/styles.css
@@ -4,7 +4,7 @@ body {
   margin: 50px;
   padding: 0;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  background-color: lightyellow;
+  background-color: pink;
   text-align: right;
   line-height: 2;
 }
@@ -20,7 +20,7 @@ body {
   position: absolute;
   color: #fff;
   font-size: 100px;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: 'Krona One', sans-serif;
   top: 120px;
   text-transform: uppercase;
   right: 0;
@@ -28,9 +28,9 @@ body {
 
 .date{
   font-style: italic;
-  color: #fff;
-  font-size: 120px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: black;
+  font-size: 100px;
+  font-family: 'Krona One', sans-serif;
 }
 .title{
     position: absolute;
@@ -56,7 +56,7 @@ body {
 .time{
   font-weight: bold;
   margin-top: 150px;
-  background: lightslategray;
+  margin-left: 15px;
   color:black;
   text-align: left;
   left:0;
@@ -66,6 +66,7 @@ body {
   position: absolute;
   bottom: 30px;
   z-index: 3;
+  font-size: 100px;
   animation: flashing 0.1s infinite;
   animation-direction: alternate-reverse;
 }
