--- a/schutz/assets/css/styles.css
+++ b/schutz/assets/css/styles.css
@@ -6,14 +6,16 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   background-image: url("ds22.jpg");
   background: linear-gradient(to right, #e8f7ec , #b6edc6); 
-
+  text-align: center;
 }
 
 .wrapper {
   position: absolute;
-  margin-top: 80px;
-  margin-left: 80px;
-  margin-bottom: 100px;
+  top: 50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  padding-top: 600px;
+  
 }
 
 .series {
@@ -66,6 +68,9 @@ img:hover {
   width: 30px;
   height: 30px;
   margin: 20px 0;
+  position: absolute;
+  display: inline-block;
+ 
 }
 
 emmit:hover {
@@ -77,3 +82,4 @@ a {
   font-family: 'Crushed', cursive;
   line-height: 1;
 }
+
