--- a/koether/assets/css/styles.css
+++ b/koether/assets/css/styles.css
@@ -4,23 +4,37 @@ body {
   margin: 50px;
   padding: 0;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  color: rgb(207, 80, 80);
+  color: #fff;
   animation: bgPulse 3s infinite;
   animation-direction: alternate-reverse;
   text-align: center
 }
 
-.series,
-.artist,
-.title,
+.series, 
+.title {
+ padding:14px;
+ font-size: 30px;
+}
+
+.artist {
+  font-size: 200px;
+  letter-spacing: 10px;
+  text-transform: uppercase;
+}
+
 .date,
 .time,
 .location {
-  font-size: 100px;
+  font-size: 20px;
   line-height: 1.1;
 }
 
 @keyframes bgPulse {
-  from {background: black;}
+  from {background: #990000;}
   to {background: #fff;}
+}
+
+img {
+  padding: 10px;
+  width: 30%;
 }
