--- a/harrison/assets/css/styles.css
+++ b/harrison/assets/css/styles.css
@@ -81,3 +81,47 @@ img:hover{
   height: 400px;
 }
 
+.circle {
+  position: absolute;
+  border-radius: 100%;
+}
+
+.c1 {
+  top: 100px;
+  left: 100px;
+  width: 50px;
+  height: 50px;
+  background: #fff;
+}
+
+.c2 {
+  top: 50px;
+  left: 600px;
+  width: 100px;
+  height: 100px;
+  background: cyan;
+}
+
+.c3 {
+  top: 500px;
+  left: 400px;
+  width: 25px;
+  height: 25px;
+  background: magenta;
+}
+
+.c4 {
+  top: 700px;
+  left: 300px;
+  width: 35px;
+  height: 35px;
+  background: green;
+}
+
+.c5 {
+  top: 1000px;
+  left: 700px;
+  width: 350px;
+  height: 350px;
+  background: yellow;
+}
