--- a/peyton/assets/css/styles.css
+++ b/peyton/assets/css/styles.css
@@ -71,3 +71,19 @@ a:hover {
  font-size: 30px;
  text-align: right;
 }
+
+.circle{
+  margin-top: 100px;
+  width: 300px;
+	height: 300px;
+	background: rgb(145, 220, 255);
+	-moz-border-radius: 150px;
+	-webkit-border-radius: 150px;
+  border-radius: 150px;
+  display: inline-block;
+}
+
+.c2{ background: #f93;}
+.c3{ background: rgb(51, 255, 221);}
+.c4{ background: rgb(255, 51, 177);}
+.c5{ background: rgb(108, 0, 151);}
