--- a/koether/assets/css/styles.css
+++ b/koether/assets/css/styles.css
@@ -38,3 +38,64 @@ img {
   padding: 10px;
   width: 30%;
 }
+
+.shape{
+	width: 150px;
+	height: 150px;
+	background-color: #53c3d3;
+	border-radius: 50%;
+	position: absolute;
+	top: 200px;
+	left: 200px;
+}
+
+.shape2{
+	width: 75px;
+	height: 75px;
+	background-color: orange;
+	border-radius: 50%;
+	position: absolute;
+	left: 37px;
+	top: 37px;
+}
+
+.shape3{
+	width: 100px;
+	height: 100px;
+	background-color: hotpink;
+	border-radius: 50%;
+	position: absolute;
+	left: 37px;
+	top: 250px;
+}
+
+
+.shape4{
+	width: 100px;
+	height: 100px;
+	background-color: hotpink;
+	border-radius: 50%;
+	position: absolute;
+	right: 37px;
+	top: 250px;
+}
+
+.shape5{
+	width: 150px;
+	height: 150px;
+	background-color: #53c3d3;
+	border-radius: 50%;
+	position: absolute;
+	top: 200px;
+	right: 200px;
+}
+
+.shape6{
+	width: 75px;
+	height: 75px;
+	background-color: orange;
+	border-radius: 50%;
+	position: absolute;
+	right: 37px;
+	top: 37px;
+}
