--- a/genzken/assets/css/styles.css
+++ b/genzken/assets/css/styles.css
@@ -72,3 +72,31 @@ img{
   border-radius: 100%;
   background: #333;
 }
+
+.circle:hover {
+  width: 0;
+  height: 0;
+  background: #fff;
+  border-radius:0%;
+  z-index: 0;
+	border-top: 100px solid transparent;
+	border-right: 200px solid #f8cc47;
+  border-bottom: 100px solid transparent;
+  animation-name: spin;
+  animation-duration: 5000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear; 
+  transform: rotate(3deg); */
+  transform: rotate(0.3rad);/ */
+  transform: rotate(3grad); */ 
+  transform: rotate(.03turn);  */
+}
+
+@keyframes spin {
+  from {
+      transform:rotate(0deg);
+  }
+  to {
+      transform:rotate(360deg);
+  }
+}
